fix date col clipping

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -507,7 +507,7 @@ h1 {
 }
 
 .date-col {
-  width: 80px;
+  width: 85px;
   text-align: left;
   position: relative;
   white-space: nowrap;
